修复节点标签居中问题：更新vis-network版本，修正节点shape配置，清理Python缓存重新生成数据

--- a/knowledge_graph.html
+++ b/knowledge_graph.html
@@ -7,7 +7,7 @@
 
     <!-- vis-network CSS -->
     <link
-      href="https://unpkg.com/vis-network/standalone/umd/vis-network.min.css"
+      href="https://cdn.jsdelivr.net/npm/vis-network@9.1.12/standalone/umd/vis-network.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -112,7 +112,7 @@
     </div>
 
     <!-- vis-network JavaScript -->
-    <script src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vis-network@9.1.12/standalone/umd/vis-network.min.js"></script>
 
     <!-- 自定义脚本 -->
     <script src="script.js"></script>
